canvas alignment fixed, looks improved

--- a/public/stylesheets/style-g.css
+++ b/public/stylesheets/style-g.css
@@ -374,7 +374,8 @@ textarea {
   border-style: none;
 }
 .visualization {
-  background: url(http://pic.putaojiayuan.com/uploadfile/tuku/SeCaiBeiJing/12190521074117.jpg) 50% 50%;
+  background: url(http://www.goodwp.com/images/201105/goodwp.com_17772.jpg) 50% 50%;
+  /*background: url(http://pic.putaojiayuan.com/uploadfile/tuku/SeCaiBeiJing/12190521074117.jpg) 50% 50%;*/
   background-size: cover;
   bottom: 0;
   left: 0;
